# SchoNavi

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.prod.yml  pubspec.yaml  接口文档.md
web/backend_agent/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.cloud.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  开发文档.md  推荐系统需求分析.md  项目规划.md
web/backend_agent/app/: main.py
web/backend_agent/app/api/: router.py
web/backend_agent/app/core/: config.py  dependencies.py  exceptions.py  logging.py  response.py
web/backend_agent/app/jobs/: build_graph.py  build_vector_index.py  import_dataset.py  rebuild_all.py
web/backend_agent/app/models/: __init__.py  base.py  feedback.py  graph_edge.py  interaction.py  item.py  org_unit.py  profile.py  recommendation_log.py  tag.py  user.py
web/backend_agent/app/services/: domain_gate.py  evidence_assembler.py  (+9 more)
web/backend_agent/configs/: discipline_ontology.yaml  sources.yaml
web/backend_agent/frontend/: streamlit_app.py
web/backend_agent/light_graph_rec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/backend_agent/raw_data/: buaa.edu.cn.db  scu.edu.cn.db
web/backend_agent/tests/: conftest.py  test_api.py  test_api_enriched.py  test_config.py  test_contract_fixtures.py  test_domain_gate.py  test_edge_cases.py  test_evidence.py  test_evidence_backed_response.py  test_followup.py  test_graph_diffusion.py  test_llm.py  test_models.py  test_ranking.py  test_reranker.py  test_retrieval_domain_integration.py  test_semantic_drift_regression.py
(+737 files in other folders)
